force-app/main/default/objects/Maintori_Customers__c/Maintori_Customers__c.object-meta.xml
<CustomObject>
    <label>Maintori_Customers</label>
    <nameField>
        <label>Maintori_Customers</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maintori_Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>