force-app/main/default/objects/Maintori_Customers__c/fields/axcustomer_apartment__c.field-meta.xml
<CustomField>
    <fullName>axcustomer_apartment__c</fullName>
    <label>axcustomer_apartment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>