force-app/main/default/objects/Maintori_Customers__c/fields/axcustomer_axcompany__c.field-meta.xml
<CustomField>
    <fullName>axcustomer_axcompany__c</fullName>
    <label>axcustomer_axcompany</label>
    <length>255</length>
    <type>Text</type>
</CustomField>