force-app/main/default/objects/Maintori_Customers__c/fields/axcustomer_axcreateddate__c.field-meta.xml
<CustomField>
    <fullName>axcustomer_axcreateddate__c</fullName>
    <label>axcustomer_axcreateddate</label>
    <type>Date</type>
</CustomField>