force-app/main/default/objects/Maintori_Customers__c/fields/axcustomer_axmodifieddate__c.field-meta.xml
<CustomField>
    <fullName>axcustomer_axmodifieddate__c</fullName>
    <label>axcustomer_axmodifieddate</label>
    <type>Date</type>
</CustomField>