force-app/main/default/objects/Maintori_Customers__c/fields/axcustomer_businessid__c.field-meta.xml
<CustomField>
    <fullName>axcustomer_businessid__c</fullName>
    <label>axcustomer_businessid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>