force-app/main/default/objects/Maintori_Customers__c/fields/axcustomer_city__c.field-meta.xml
<CustomField>
    <fullName>axcustomer_city__c</fullName>
    <label>axcustomer_city</label>
    <length>255</length>
    <type>Text</type>
</CustomField>