force-app/main/default/objects/Maintori_Customers__c/fields/axcustomer_createdBy__c.field-meta.xml
<CustomField>
    <fullName>axcustomer_createdBy__c</fullName>
    <label>axcustomer_createdBy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>