force-app/main/default/objects/Maintori_Customers__c/fields/axcustomer_createdDate__c.field-meta.xml
<CustomField>
    <fullName>axcustomer_createdDate__c</fullName>
    <label>axcustomer_createdDate</label>
    <type>DateTime</type>
</CustomField>