force-app/main/default/objects/Maintori_Customers__c/fields/axcustomer_creditmax__c.field-meta.xml
<CustomField>
    <fullName>axcustomer_creditmax__c</fullName>
    <label>axcustomer_creditmax</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>