force-app/main/default/objects/Maintori_Customers__c/fields/axcustomer_custbalance__c.field-meta.xml
<CustomField>
    <fullName>axcustomer_custbalance__c</fullName>
    <label>axcustomer_custbalance</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>