force-app/main/default/objects/Maintori_Customers__c/fields/axcustomer_custclassificationid__c.field-meta.xml
<CustomField>
    <fullName>axcustomer_custclassificationid__c</fullName>
    <label>axcustomer_custclassificationid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>