force-app/main/default/objects/Maintori_Customers__c/fields/axcustomer_dimension2__c.field-meta.xml
<CustomField>
    <fullName>axcustomer_dimension2__c</fullName>
    <label>axcustomer_dimension2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>