force-app/main/default/objects/Maintori_Customers__c/fields/axcustomer_dimension3__c.field-meta.xml
<CustomField>
    <fullName>axcustomer_dimension3__c</fullName>
    <label>axcustomer_dimension3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>