force-app/main/default/objects/Maintori_Customers__c/fields/axcustomer_dimension4__c.field-meta.xml
<CustomField>
    <fullName>axcustomer_dimension4__c</fullName>
    <label>axcustomer_dimension4</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>