force-app/main/default/objects/Maintori_Customers__c/fields/axcustomer_fax_pho__c.field-meta.xml
<CustomField>
    <fullName>axcustomer_fax_pho__c</fullName>
    <label>axcustomer_fax_pho</label>
    <type>Phone</type>
</CustomField>