force-app/main/default/objects/Maintori_Customers__c/fields/axcustomer_hidden_by_system__c.field-meta.xml
<CustomField>
    <fullName>axcustomer_hidden_by_system__c</fullName>
    <defaultValue>false</defaultValue>
    <label>axcustomer_hidden_by_system</label>
    <type>Checkbox</type>
</CustomField>