force-app/main/default/objects/Maintori_Customers__c/fields/axcustomer_id__c.field-meta.xml
<CustomField>
    <fullName>axcustomer_id__c</fullName>
    <label>axcustomer_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>