force-app/main/default/objects/Maintori_Customers__c/fields/axcustomer_invoicecustomernumber__c.field-meta.xml
<CustomField>
    <fullName>axcustomer_invoicecustomernumber__c</fullName>
    <label>axcustomer_invoicecustomernumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>