force-app/main/default/objects/Maintori_Customers__c/fields/axcustomer_LastModifiedBy__c.field-meta.xml
<CustomField>
    <fullName>axcustomer_LastModifiedBy__c</fullName>
    <label>axcustomer_LastModifiedBy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>