force-app/main/default/objects/Maintori_Customers__c/fields/axcustomer_LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>axcustomer_LastModifiedDate__c</fullName>
    <label>axcustomer_LastModifiedDate</label>
    <type>DateTime</type>
</CustomField>