force-app/main/default/objects/Maintori_Customers__c/fields/axcustomer_mandatorycreditlimit__c.field-meta.xml
<CustomField>
    <fullName>axcustomer_mandatorycreditlimit__c</fullName>
    <label>axcustomer_mandatorycreditlimit</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>