force-app/main/default/objects/Maintori_Customers__c/fields/axcustomer_marketingban__c.field-meta.xml
<CustomField>
    <fullName>axcustomer_marketingban__c</fullName>
    <defaultValue>false</defaultValue>
    <label>axcustomer_marketingban</label>
    <type>Checkbox</type>
</CustomField>