force-app/main/default/objects/Maintori_Customers__c/fields/axcustomer_name__c.field-meta.xml
<CustomField>
    <fullName>axcustomer_name__c</fullName>
    <label>axcustomer_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>