force-app/main/default/objects/Maintori_Customers__c/fields/axcustomer_number__c.field-meta.xml
<CustomField>
    <fullName>axcustomer_number__c</fullName>
    <label>axcustomer_number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>