force-app/main/default/objects/Maintori_Customers__c/fields/axcustomer_openonaccounts__c.field-meta.xml
<CustomField>
    <fullName>axcustomer_openonaccounts__c</fullName>
    <label>axcustomer_openonaccounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>