force-app/main/default/objects/Maintori_Customers__c/fields/axcustomer_origin_D365__c.field-meta.xml
<CustomField>
    <fullName>axcustomer_origin_D365__c</fullName>
    <defaultValue>false</defaultValue>
    <label>axcustomer_origin_D365</label>
    <type>Checkbox</type>
</CustomField>