force-app/main/default/objects/Maintori_Customers__c/fields/axcustomer_phone2__c.field-meta.xml
<CustomField>
    <fullName>axcustomer_phone2__c</fullName>
    <label>axcustomer_phone2</label>
    <type>Phone</type>
</CustomField>