force-app/main/default/objects/Maintori_Customers__c/fields/axcustomer_phone__c.field-meta.xml
<CustomField>
    <fullName>axcustomer_phone__c</fullName>
    <label>axcustomer_phone</label>
    <type>Phone</type>
</CustomField>