force-app/main/default/objects/Maintori_Customers__c/fields/axcustomer_prepayment__c.field-meta.xml
<CustomField>
    <fullName>axcustomer_prepayment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>axcustomer_prepayment</label>
    <type>Checkbox</type>
</CustomField>