force-app/main/default/objects/Maintori_Customers__c/fields/axcustomer_state__c.field-meta.xml
<CustomField>
    <fullName>axcustomer_state__c</fullName>
    <label>axcustomer_state</label>
    <length>255</length>
    <type>Text</type>
</CustomField>