force-app/main/default/objects/Maintori_Customers__c/fields/axcustomer_statisticsgroup__c.field-meta.xml
<CustomField>
    <fullName>axcustomer_statisticsgroup__c</fullName>
    <label>axcustomer_statisticsgroup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>