force-app/main/default/objects/Maintori_Customers__c/fields/axcustomer_street1__c.field-meta.xml
<CustomField>
    <fullName>axcustomer_street1__c</fullName>
    <label>axcustomer_street1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>