force-app/main/default/objects/Maintori_Customers__c/fields/axcustomer_street2__c.field-meta.xml
<CustomField>
    <fullName>axcustomer_street2__c</fullName>
    <label>axcustomer_street2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>