force-app/main/default/objects/Maintori_Customers__c/fields/axcustomer_zipcode__c.field-meta.xml
<CustomField>
    <fullName>axcustomer_zipcode__c</fullName>
    <label>axcustomer_zipcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>