force-app/main/default/objects/Maintori_Customers__c/fields/deliveryterm__c.field-meta.xml
<CustomField>
    <fullName>deliveryterm__c</fullName>
    <label>deliveryterm</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>