force-app/main/default/objects/Maintori_Customers__c/fields/paymentterm_id__c.field-meta.xml
<CustomField>
    <fullName>paymentterm_id__c</fullName>
    <label>paymentterm_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>