force-app/main/default/objects/Maintori_Customers__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>axcustomer_id__c</columns>
    <columns>axcustomer_axcompany__c</columns>
    <columns>axcustomer_number__c</columns>
    <columns>axcustomer_invoicecustomernumber__c</columns>
    <columns>axcustomer_name__c</columns>
    <columns>axcustomer_phone__c</columns>
    <columns>axcustomer_phone2__c</columns>
    <columns>axcustomer_fax_pho__c</columns>
    <columns>language_code_lan__c</columns>
    <columns>axcustomer_street1__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>